main page massage bug on mobile, fixed

--- a/css/massagespage.css
+++ b/css/massagespage.css
@@ -99,7 +99,8 @@ section img {
   #C5,
   #C6,
   #C7,
-  #C8 {
+  #C8,
+  #C9 {
       flex-direction: column;
   }
 }
